<resources>
    <string name="app_name">Recivo</string>
    <string name="username_editText_register">Username</string>
    <string name="email_editText_register">Email</string>
    <string name="password_editText_register">Password</string>
    <string name="confirm_password_editText_register">Confirm Password</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_login_signupActivity">Log in</string>
    <string name="text_already_have_account">Already have an account?</string>
    <string name="text_sign_up_here">SIGN UP</string>
    <string name="need_an_account">Trouble logging in or need an account?</string>
    <string name="account_signup_created">Problem with your account?</string>
    <string name="back_to_login">Sign up</string>
    <string name="welcome">Welcome</string>
    <string name="login">LOGIN</string>
    <string name="account_created_login">ACCOUNT CREATED</string>
    <string name="text_create_account_description">Create your account by filling in the fields below</string>
    <string name="text_login_description">Log in to your account by filling in the fields below</string>
    <!-- Strings used for fragments for navigation -->

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username_nav_header">Username</string>
    <string name="search">Search</string>
    <string name="searchTitle">Search</string>
    <string name="start_chat">Start Chat</string>
    <string name="enter_message">Enter message</string>
    <string name="forgotten_password">FORGOTTEN PASSWORD?</string>
    <string name="reset_your_password_by_tying_in_your_email_below">No problem! Reset your password by tying in your email below:</string>
    <string name="send_reset_email">Send reset email</string>
    <string name="remembered_your_password">Remembered your password?</string>
    <string name="back_to_login_forgot_password">Back to login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="edit_your_bio">Edit your bio:</string>
    <string name="select_photo">Select Photo</string>
    <string name="view_profile_desc">View Profile</string>
    <string name="view_profile_title">View profile</string>
    <string name="search_chat_dec">Search Chat</string>
    <string name="search_chat_title">Search chat</string>
    <string name="mute_notifications_desc">Mute Notifications</string>
    <string name="mute_notifications_title">Mute notifications</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="you_are_currently_logged_in_as">You are currently logged in as:</string>
    <string name="conversations">Conversations</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="your_profile_image">Your profile image</string>
    <string name="button">Button</string>
</resources>