<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_profile"
        android:contentDescription="@string/view_profile_desc"
        android:title="@string/view_profile_title"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/ic_search_black_24dp"
        android:id="@+id/search_chat"
        android:contentDescription="@string/search_chat_dec"
        android:title="@string/search_chat_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mute_notifications"
        android:contentDescription="@string/mute_notifications_desc"
        android:title="@string/mute_notifications_title"
        app:showAsAction="never" />
</menu>