<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/yellow">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/outfit_black"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/yellow"
        android:text="@string/button_login_signupActivity"
        android:theme="@style/Theme.InstantMessagingApp.Day"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/yellow"
        android:text="@string/text_sign_up_here"
        android:theme="@style/Theme.InstantMessagingApp.Day"
        app:layout_constraintEnd_toEndOf="@+id/login_button_welcome"
        app:layout_constraintStart_toStartOf="@+id/login_button_welcome"
        app:layout_constraintTop_toBottomOf="@+id/login_button_welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>