<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context="com.xeniox.instantmessagingapp.SignupActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/text_sign_up_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/outfit_black"
        android:text="@string/text_sign_up_here"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/outfit_light"
        android:text="@string/text_create_account_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/text_sign_up_here"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_up_here" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_editText_register_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:hint="@string/username_editText_register"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_profile_picture"
        app:startIconDrawable="@drawable/ic_person_outline_black_24dp"
        tools:override="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_editText_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/outfit_bold"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_editText_register_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:hint="@string/email_editText_register"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/username_editText_register_layout"
        app:layout_constraintStart_toStartOf="@id/username_editText_register_layout"
        app:layout_constraintTop_toBottomOf="@+id/username_editText_register_layout"
        app:startIconDrawable="@drawable/ic_email_black_24dp"
        tools:override="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editText_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/outfit_bold"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_editText_register_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:hint="@string/password_editText_register"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/email_editText_register_layout"
        app:layout_constraintStart_toStartOf="@+id/email_editText_register_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_register_layout"
        app:startIconDrawable="@drawable/ic_lock_black_24dp"
        tools:override="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_editText_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/outfit_bold"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password_editText_register_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="16dp"
        android:hint="@string/confirm_password_editText_register"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:endIconMode="password_toggle"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_register_layout"
        app:layout_constraintStart_toStartOf="@+id/password_editText_register_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_register_layout"
        app:startIconDrawable="@drawable/ic_enhanced_encryption_black_24dp"
        tools:override="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_editText_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/outfit_bold"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/button_create_account"
        android:textColor="@color/white"
        android:theme="@style/Theme.InstantMessagingApp"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_editText_register_layout"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_editText_register_layout"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_editText_register_layout" />

    <TextView
        android:id="@+id/text_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/outfit_regular"
        android:text="@string/text_already_have_account"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_login_signupActivity"
        app:layout_constraintEnd_toEndOf="@id/button_create_account"
        app:layout_constraintStart_toStartOf="@id/button_create_account" />

    <Button
        android:id="@+id/button_login_signupActivity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/button_login_signupActivity"
        android:textColor="@color/white"
        android:theme="@style/Theme.InstantMessagingApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_already_have_account"
        app:layout_constraintStart_toStartOf="@+id/text_already_have_account" />

    <Button
        android:id="@+id/button_profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_profile_picture_button"
        android:fontFamily="@font/outfit_bold"
        android:text="@string/select_photo"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:theme="@style/Theme.InstantMessagingApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_imageview_register"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_profile_picture"
        app:layout_constraintEnd_toEndOf="@+id/button_profile_picture"
        app:layout_constraintStart_toStartOf="@+id/button_profile_picture"
        app:layout_constraintTop_toTopOf="@+id/button_profile_picture" />



</androidx.constraintlayout.widget.ConstraintLayout>