<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/text_sign_up_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/outfit_black"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/username_editText_login_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_light"
        android:textSize="15sp"
        android:text="@string/text_login_description"
        app:layout_constraintStart_toStartOf="@+id/text_sign_up_here"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_up_here" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_editText_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/username_editText_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        tools:override="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_editText_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:textCursorDrawable="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:id="@+id/username_editText_login"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_margin="16dp"-->
<!--        android:autofillHints=""-->
<!--        android:background="@color/white"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/username_editText_register"-->
<!--        android:inputType="textPersonName"-->
<!--        android:textColorHint="#757575"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/text_welcome_back"-->
<!--        app:layout_constraintStart_toStartOf="@+id/text_welcome_back"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/text_welcome_back" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_editText_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/password_editText_register"
        app:layout_constraintEnd_toEndOf="@id/username_editText_login_layout"
        app:layout_constraintStart_toStartOf="@id/username_editText_login_layout"
        app:layout_constraintTop_toBottomOf="@id/username_editText_login_layout"
        app:boxStrokeWidth="1dp"
        app:boxStrokeColor="@color/black"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        tools:override="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_editText_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/black"
            android:inputType="text"
            android:textCursorDrawable="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:id="@+id/password_editText_login"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:autofillHints=""-->
<!--        android:background="@color/white"-->
<!--        android:ems="10"-->
<!--        android:hint="@string/password_editText_register"-->
<!--        android:inputType="textPassword"-->
<!--        android:textColorHint="#757575"-->
<!--        android:padding="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/username_editText_login_layout"-->
<!--        app:layout_constraintStart_toStartOf="@+id/username_editText_login_layout"-->
<!--        app:layout_constraintTop_toBottomOf="@id/username_editText_login_layout" />-->

    <Button
        android:id="@+id/button_login_loginActivity"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_login_signupActivity"
        android:textColor="@color/yellow"
        android:theme="@style/Theme.InstantMessagingApp.Day"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_login_layout"
        app:layout_constraintStart_toStartOf="@+id/password_editText_login_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_login_layout" />

    <TextView
        android:id="@+id/text_need_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_an_account"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/primary_text"
        app:layout_constraintTop_toBottomOf="@id/button_login_loginActivity"
        app:layout_constraintLeft_toLeftOf="@id/button_login_loginActivity"
        app:layout_constraintRight_toRightOf="@id/button_login_loginActivity"/>

    <Button
        android:id="@+id/button_back_to_signin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/back_to_login"
        android:theme="@style/Theme.InstantMessagingApp.Day"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/text_need_account"
        app:layout_constraintStart_toStartOf="@+id/text_need_account"
        app:layout_constraintTop_toBottomOf="@+id/text_need_account" />

</androidx.constraintlayout.widget.ConstraintLayout>