<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xeniox.instantmessagingapp.SettingsActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar_settings"
                style="@style/MyToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ItemBackground"
                app:menu="@menu/actionbar_menu"
                app:navigationIcon="@drawable/ic_menu_black_24dp"
                app:title="SETTINGS"
                app:titleCentered="true"
                app:titleTextColor="@color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tap to change colour"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_image_settings"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

        <EditText
            android:id="@+id/text_username_settings"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:textSize="25sp"
            android:drawableLeft="@drawable/ic_edit_black_24dp"
            android:textColor="@color/black"
            android:fontFamily="@font/outfit_extrabold"
            android:hint="Username"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:importantForAutofill="no"
            android:paddingStart="8dp"
            android:windowSoftInputMode="adjustResize"
            app:layout_constraintBottom_toTopOf="@+id/text_email_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_profile_image_settings"
            app:layout_constraintTop_toTopOf="@+id/user_profile_image_settings"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/text_email_settings"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:fontFamily="@font/outfit_bold"
            android:gravity="start"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/save_username"
            app:layout_constraintEnd_toEndOf="@+id/text_username_settings"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/text_username_settings"
            app:layout_constraintTop_toBottomOf="@+id/text_username_settings" />

        <EditText
            android:id="@+id/edit_text_bio_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollHorizontally="false"
            android:text="@string/bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/user_profile_image_settings"
            app:layout_constraintTop_toBottomOf="@+id/text_edit_bio"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/button_save_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save bio"
            android:theme="@style/Theme.InstantMessagingApp"
            app:layout_constraintStart_toStartOf="@+id/edit_text_bio_settings"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_bio_settings" />

        <TextView
            android:id="@+id/text_edit_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/edit_your_bio"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/edit_text_bio_settings"
            app:layout_constraintTop_toBottomOf="@+id/user_profile_image_settings" />

        <TextView
            android:id="@+id/text_edit_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/outfit_regular"
            android:text="Edit your status:"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/button_save_bio"
            app:layout_constraintTop_toBottomOf="@+id/button_save_bio" />

        <EditText
            android:id="@+id/edit_text_status_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollHorizontally="false"
            android:text="Save Status"
            app:layout_constraintStart_toStartOf="@+id/text_edit_status"
            app:layout_constraintTop_toBottomOf="@+id/text_edit_status" />

        <Button
            android:id="@+id/button_save_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            app:layout_constraintStart_toStartOf="@+id/edit_text_status_settings"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_status_settings" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/outfit_regular"
            android:text="Change the app's default theme:"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/button_save_status"
            app:layout_constraintTop_toBottomOf="@+id/button_save_status" />

        <Button
            android:id="@+id/save_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save username"
            app:layout_constraintBottom_toBottomOf="@+id/user_profile_image_settings"
            app:layout_constraintEnd_toEndOf="@+id/text_email_settings"
            app:layout_constraintTop_toBottomOf="@+id/text_email_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_drawer_settings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>